# labs-oc-2k

./: README.md
1/: CMakeLists.txt  child.c  parent.c  tests.cpp
